--- a/notebook/EDA_CreditRisk.ipynb
+++ b/notebook/EDA_CreditRisk.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "id": "7eaae1d7",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "id": "57907087",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "id": "7d1a2a0b",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "4            0.55       Y            4  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "id": "417e5820",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "(32581, 12)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "id": "707d6a7b",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 6,
    "id": "ae16686e",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "0"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "id": "25f95bc8",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 8,
    "id": "2c2b61b6",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "id": "76c608dc",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
        "max       23.220000      1.000000        0.830000     30.000000  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
    "id": "1afd3c09",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "4            0.55       Y            4  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 11,
    "id": "b9081742",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 12,
    "id": "befb443f",
    "metadata": {},
    "outputs": [],
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 13,
    "id": "2dd97e26",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 14,
    "id": "c2510266",
    "metadata": {},
    "outputs": [],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 15,
    "id": "e9347da8",
    "metadata": {},
    "outputs": [],
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 16,
    "id": "7a436f82",
    "metadata": {},
    "outputs": [],
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 17,
    "id": "02e6f180",
    "metadata": {},
    "outputs": [
@@ -1108,13 +1108,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 18,
    "id": "dc93eaca",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Fixing few outliers in Age, Income and Emp_length\n",
     "df = df[(df['Age'] <= 80) & (df['Income'] <= 1000000) & (df['Emp_length'] <= 45)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "80dbad03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Home</th>\n",
+       "      <th>Emp_length</th>\n",
+       "      <th>Intent</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Rate</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Percent_income</th>\n",
+       "      <th>Default</th>\n",
+       "      <th>Cred_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>54400</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>14.27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>25</td>\n",
+       "      <td>137000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>34800</td>\n",
+       "      <td>16.77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>22</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>33950</td>\n",
+       "      <td>14.54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>21</td>\n",
+       "      <td>11000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>4575</td>\n",
+       "      <td>17.74</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>21</td>\n",
+       "      <td>11389</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>4000</td>\n",
+       "      <td>12.84</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>26</td>\n",
+       "      <td>95000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>HOMEIMPROVEMENT</td>\n",
+       "      <td>31050</td>\n",
+       "      <td>14.17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>24</td>\n",
+       "      <td>64000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>DEBTCONSOLIDATION</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>14.54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>25</td>\n",
+       "      <td>75000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>HOMEIMPROVEMENT</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>16.89</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>23</td>\n",
+       "      <td>300000</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>24250</td>\n",
+       "      <td>19.41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>24</td>\n",
+       "      <td>78000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>DEBTCONSOLIDATION</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age  Income      Home  Emp_length             Intent  Amount   Rate  \\\n",
+       "4    24   54400      RENT         8.0            MEDICAL   35000  14.27   \n",
+       "21   25  137000      RENT         9.0           PERSONAL   34800  16.77   \n",
+       "24   22   80000      RENT         3.0           PERSONAL   33950  14.54   \n",
+       "26   21   11000  MORTGAGE         3.0            VENTURE    4575  17.74   \n",
+       "29   21   11389     OTHER         5.0          EDUCATION    4000  12.84   \n",
+       "32   26   95000      RENT         7.0    HOMEIMPROVEMENT   31050  14.17   \n",
+       "37   24   64000      RENT         8.0  DEBTCONSOLIDATION   30000  14.54   \n",
+       "38   25   75000      RENT         4.0    HOMEIMPROVEMENT   30000  16.89   \n",
+       "43   23  300000       OWN         1.0          EDUCATION   24250  19.41   \n",
+       "50   24   78000      RENT         4.0  DEBTCONSOLIDATION   30000    NaN   \n",
+       "\n",
+       "    Status  Percent_income Default  Cred_length  \n",
+       "4        1            0.55       Y            4  \n",
+       "21       0            0.25       Y            2  \n",
+       "24       1            0.42       Y            4  \n",
+       "26       1            0.42       Y            3  \n",
+       "29       1            0.35       Y            2  \n",
+       "32       1            0.33       Y            3  \n",
+       "37       1            0.47       Y            3  \n",
+       "38       1            0.40       Y            4  \n",
+       "43       0            0.08       Y            2  \n",
+       "50       1            0.38       Y            4  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Default == 'Y'].head(10)"
    ]
   },
   {
